--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/ai-form-recognizer": "^4.0.0-beta.6",
+    "@azure/identity": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "mongoose": "^6.5.3",
     "nodemon": "^2.0.19"
   }
 }
